--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,12 @@
   <property name="src" value="src"/>
   <property name="build" value="build"/>
   <property name="version" value="1.1"/>
+  <property name="versionString" value="1_1"/>
   <property name="docs" value="docs"/>
+  <property name="resources" value="resources"/>
   <property name="dist"  value="release/htmlparser${version}"/>
+  <property name="releaseDir" value="release"/>
+
   <target name="init">
 
     <!-- Create the build directory structure used by compile -->
@@ -23,7 +27,7 @@
     <mkdir dir="${dist}/lib"/>
 
     <!-- Put everything in ${build} into the htmlparser.jar file -->
-    <jar jarfile="${dist}/lib/htmlparser.jar" basedir="${build}" manifest="${src}/Manifest.mf" />
+    <jar jarfile="${dist}/lib/htmlparser.jar" basedir="${build}" manifest="${resources}/Manifest.mf" />
   </target>
 
   <!-- Create the javadoc for the project -->
@@ -60,7 +64,24 @@ If you want to join as a developer, please sign up on the <A HREF="http://lists.
     </copy> 
   </target>
 
-  <target name="Release" depends="Create HTMLParser.jar,javadoc">
+  <!-- Copy the batch files into the htmlparser release directory -->
+  <target name="CopyBatch">
+     <mkdir dir="${dist}/bin"/>   
+     <copy todir="${dist}/bin" >
+        <fileset dir="${resources}" includes="*.bat"/>
+     </copy>
+  </target>
+
+  <!-- The release directory structuring finishes here -->  
+  <target name="Release" depends="Create HTMLParser.jar,javadoc,CopyBatch">
+  </target>
+
+  <!-- Package the release, creating the docs gzip also for uploading -->
+  <target name="Package" depends="Release">
+    <zip zipfile="${releaseDir}/htmlparser${versionString}.zip"
+       basedir="${dist}"/>
+    <tar tarfile="${releaseDir}/docs.tar" basedir="${dist}/docs"/>
+    <gzip zipfile="${releaseDir}/docs.tar.gz" src="${releaseDir}/docs.tar"/>
   </target>
 
   <target name="clean">
