Latest Ant Script

--- a/build.xml
+++ b/build.xml
@@ -3,9 +3,9 @@
   <!-- set global properties for this build -->
   <property name="src" value="src"/>
   <property name="build" value="build"/>
-  <property name="version" value="1_2(20020503)"/>
+  <property name="version" value="1_2_20020616"/>
   <property name="versionString" value="1_2"/>
-  <property name="previousVersion" value="1.1"/>
+  <property name="previousVersion" value="1_2_20020607"/>
   <property name="docs" value="docs"/>
   <property name="resources" value="resources"/>
   <property name="dist"  value="release/htmlparser${versionString}"/>
@@ -69,8 +69,11 @@ If you want to join as a developer, please sign up on the <A HREF="http://lists.
   <!-- Copy the design documentation and release notes into the doc director -->
   <target name="CopyDoc">
     <copy todir="${dist}/docs">
-    <fileset dir="${docs}"/>
+    	<fileset dir="${docs}"/>
     </copy> 
+    <!-- Copy the release notes as readme.txt in the base release directory -->
+    <copy file="${docs}/release.txt" tofile="${dist}/readme.txt"/>
+
   </target>
 
   <!-- Copy the batch files into the htmlparser release directory -->
