Fixed build.xml error, not allowing it to be run from command line, reported by Rob Shields.

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="HTMLParser" default="dist" basedir=".">
+<project name="HTMLParser" default="Package" basedir=".">
 
   <!-- set global properties for this build -->
   <property name="src" value="src"/>
